--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 annotated-types==0.7.0
 asgiref==3.8.1
 Django==5.2
+django-cors-headers==4.7.0
 django-ninja==1.4.1
 gunicorn==23.0.0
 packaging==25.0
