--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ annotated-types==0.7.0
 asgiref==3.8.1
 Django==5.2
 django-ninja==1.4.1
+djantic==0.7.0
 gunicorn==23.0.0
 packaging==25.0
 psycopg2-binary==2.9.10
